--- a/index.html
+++ b/index.html
@@ -63,10 +63,12 @@
 						<h3>Ver Proyecto</h3> </div>
 				</li>
 			</a>
-			<li class="ejemplos"><img src="img/coming.png" />
-				<div class="capa">
-					<h3>Ver Proyecto</h3> </div>
-			</li>
+			<a href="lights/index.html">
+				<li class="ejemplos"><img src="img/lights/logo.png" />
+					<div class="capa">
+						<h3>Ver Proyecto</h3> </div>
+				</li>
+			</a>
 			<li class="ejemplos"><img src="img/coming.png" />
 				<div class="capa">
 					<h3>Ver Proyecto</h3> </div>
