--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 
 <body>
@@ -22,13 +23,14 @@
 </ul>
 
 
-
 	<!--------------------PRESENTACION ------------------------>
 	<a name="inicio"></a>
 	<div class="presentacion">
 		<h1>Desliza para ver algunos de mis trabajos</h1>
 		<a href="#work"><div class="boton"></div></a>
+	
 	</div>
+
 
 	<!--------------------TRABAJOS --------------------------->
 	<a name="work"></a>
@@ -53,12 +55,19 @@
 
 </body>
 <a name="contacto"></a>	
+
+
+
+
 <div class="footer">
-    <section class="buttons">
-        <a href="https://api.whatsapp.com/send?phone=34623206385" class="fa fa-whatsapp"></a>
-        <a href="mailto:apacheca.crn@artsgrafiques.org" class="fa fa-google"></a>
-        <a href="https://www.linkedin.com/in/albertpacheca" class="fa fa-linkedin"></a>
-    </section>
+  <ul class="buttons">
+	<a href="https://www.instagram.com"><li class="social"><img src="img/iconos/instagram.png"/></li></a>
+	<li class="social"><img src="img/iconos/twitter.png"/></li>
+	<li class="social"><img src="img/iconos/tiktok.png"/></li>
+	<li class="social"><img src="img/iconos/whatsapp.png"/></li>
+	<li class="social"><img src="img/iconos/behance.png"/></li>
+	<li class="social"><img src="img/iconos/gmail.png"/></li>
+  </ul>
 </div>
 
 </html>
