--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 <div class="footer">
   <ul class="buttons">
 	<a href="https://www.instagram.com"><li class="social"><img src="img/iconos/instagram.png"/></li></a>
-	<li class="social"><img src="img/iconos/twitter.png"/></li>
-	<li class="social"><img src="img/iconos/tiktok.png"/></li>
-	<li class="social"><img src="img/iconos/whatsapp.png"/></li>
-	<li class="social"><img src="img/iconos/behance.png"/></li>
-	<li class="social"><img src="img/iconos/gmail.png"/></li>
+	<a href="https://twitter.com/typo_designs_"><li class="social"><img src="img/iconos/twitter.png"/></li></a>
+	<a href="https://www.tiktok.com/@typo_designs"><li class="social"><img src="img/iconos/tiktok.png"/></li></a>
+	<a href="https://wa.me/34623206385"><li class="social"><img src="img/iconos/whatsapp.png"/></li></a>
+	<a href="https://www.behance.net/albertpacheca"><li class="social"><img src="img/iconos/behance.png"/></li></a>
+	<a href="https://www.instagram.com"><li class="social"><img src="img/iconos/gmail.png"/></li></a>
   </ul>
 </div>
 
