--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<link rel="shortcut icon" href="img/icono.png">
+	<title>Typo</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -62,11 +63,11 @@
 <div class="footer">
   <ul class="buttons">
 	<a href="https://www.instagram.com"><li class="social"><img src="img/iconos/instagram.png"/></li></a>
-	<a href="https://twitter.com/typo_designs_"><li class="social"><img src="img/iconos/twitter.png"/></li></a>
-	<a href="https://www.tiktok.com/@typo_designs"><li class="social"><img src="img/iconos/tiktok.png"/></li></a>
+	<a href="https://twitter.com/designs_typo"><li class="social"><img src="img/iconos/twitter.png"/></li></a>
+	<a href="https://www.tiktok.com/@typo_designs_"><li class="social"><img src="img/iconos/tiktok.png"/></li></a>
 	<a href="https://wa.me/34623206385"><li class="social"><img src="img/iconos/whatsapp.png"/></li></a>
 	<a href="https://www.behance.net/albertpacheca"><li class="social"><img src="img/iconos/behance.png"/></li></a>
-	<a href="https://www.instagram.com"><li class="social"><img src="img/iconos/gmail.png"/></li></a>
+	<a href="mailto:typo.artesgraficas@gmail.com"><li class="social"><img src="img/iconos/gmail.png"/></li></a>
   </ul>
 </div>
 
